--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@ applications:
 - path: .
   memory: 256M
   instances: 1
-  name: todo
+  name: mytodos
   disk_quota: 1024M
   buildpack: sdk-for-nodejs
