--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bower": "^1.7.7",
     "cfenv": "^1.0.3",
     "express": "~4.6.1",
+    "fs": "0.0.1-security",
     "method-override": "~2.1.1",
     "morgan": "~1.1.1",
     "nano": "^6.2.0",
