update IBM Cloud logo

--- a/manifest.yml
+++ b/manifest.yml
@@ -5,3 +5,6 @@ applications:
   name: mytodos
   disk_quota: 1024M
   buildpack: nodejs_buildpack
+  services:
+    - auto-scaling-20170825
+    - todo-cloudant
