--- a/deploy2kubernetes-lb.yml
+++ b/deploy2kubernetes-lb.yml
@@ -40,11 +40,11 @@ metadata:
 spec:
   # if your cluster supports it, uncomment the following to automatically create
   # an external load-balanced IP for the frontend service.
-  # type: LoadBalancer
-  type: NodePort
+  type: LoadBalancer
+  # type: NodePort
   ports:
   - port: 8080 # Internal Port
-    nodePort: 31513
+    # nodePort: 31513
   selector:
     app: mytodos
     tier: frontend
