--- a/kubernetes/deploy-ingress-tls.yml
+++ b/kubernetes/deploy-ingress-tls.yml
@@ -6,7 +6,7 @@ metadata:
   name: mytodos
 spec:
   replicas: 2 # tells deployment to run 2 pods matching the template
-  template: # create pods using pod definition in this template
+  template:   # create pods using pod definition in this template
     metadata:
       labels:
         app: mytodos
@@ -14,12 +14,15 @@ spec:
     spec:
       containers:
       - name: mytodos
-        image: registry.eu-de.bluemix.net/mace/mytodos:v6
+        image: registry.eu-de.bluemix.net/mace/mytodos:v12
         imagePullPolicy: Always
         resources:
           requests:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 250m     # 250 millicores = 1/4 core
+            memory: 100Mi # 100 MB
+          limits:
+            cpu: 500m
+            memory: 300Mi
         volumeMounts:
           - mountPath: /opt/service-bind # Mount the "service-bind-volume" volume into the pod.
             name: service-bind-volume
@@ -33,6 +36,12 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: mytodos-ingress
+  annotations:
+    # Force the use of https if the request is http
+    ingress.bluemix.net/redirect-to-https: "True"
+    # Activate App ID for Authentication
+    # Requires the existence of an App Id service bound to the cluster
+    ingress.bluemix.net/appid-auth: "bindSecret=binding-app-id-20180705 namespace=default requestType=web serviceName=app-id-20180705"
 spec:
   tls:
   - hosts:
@@ -46,13 +55,13 @@ spec:
         backend:
           serviceName: mytodos
           servicePort: 8080
-  - host: www.mycustomdomain.com
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: mytodos
-          servicePort: 3000
+  # - host: www.mycustomdomain.com
+  #   http:
+  #     paths:
+  #     - path: /
+  #       backend:
+  #         serviceName: mytodos
+  #         servicePort: 3000
 ---
 # Service to expose frontend
 apiVersion: v1
@@ -63,8 +72,6 @@ metadata:
     app: mytodos
     tier: frontend
 spec:
-  # if your cluster supports it, uncomment the following to automatically create
-  # an external load-balanced IP for the frontend service.
   ports:
   - protocol: TCP
     port: 8080
