--- a/kubernetes/create-cluster.yml
+++ b/kubernetes/create-cluster.yml
@@ -1,15 +1,15 @@
 # File to provision a cluster using the command line
-# bx cs cluster-create [--file FILE_LOCATION]
+# ic cs cluster-create [--file FILE_LOCATION]
 name: dev-cluster
 location: fra02
 # no-subnet: <no-subnet>
-# bx cs machine-types fra02
+# ic cs machine-types fra02
 machine-type: b2c.4x16
-# bx cs vlans fra02
+# ic cs vlans fra02
 private-vlan: 2268624
 public-vlan: 2268622
 # shared or dedicated
 hardware: shared
 # Number_workers
 workerNum: 3
-kube-version: 1.9.2
+kube-version: 1.11.2
