--- a/kubernetes/deploy-ingress-tls.yml
+++ b/kubernetes/deploy-ingress-tls.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mytodos
-        image: registry.eu-de.bluemix.net/mace/mytodos:v12
+        image: registry.eu-de.bluemix.net/mace/mytodos:1
         imagePullPolicy: Always
         resources:
           requests:
