--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "node-todo",
-  "version": "0.0.0",
-  "description": "Bluemix Node.JS todo application.",
+  "name": "mytodo",
+  "version": "1.0.0",
+  "description": "Todo application.",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "postinstall": "bower install --allow-root"
   },
   "engines": {
-    "node": "6.x"
+    "node": ">=8"
   },
-  "main": "app.js",
   "dependencies": {
+    "@cloudant/cloudant": "^2.3.0",
     "async": "^1.5.2",
     "bluemix-autoscaling-agent": "^1.0.11",
     "body-parser": "~1.4.3",
     "bower": "^1.7.7",
     "cfenv": "^1.0.3",
+    "dotenv": "^6.0.0",
     "express": "~4.6.1",
     "fs": "0.0.1-security",
     "method-override": "~2.1.1",
