--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "mytodo",
-  "version": "1.0.0",
-  "description": "Todo application.",
+  "version": "2.0.0",
+  "description": "Todo application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "postinstall": "bower install --allow-root"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10.13.0"
   },
   "dependencies": {
-    "cloudant": "1.6.2",
-    "@cloudant/cloudant": "^2.4.0",
+    "@cloudant/cloudant": "^2.4.1",
     "async": "^2.6.1",
-    "bluemix-autoscaling-agent": "^1.0.11",
     "body-parser": "~1.18.3",
     "bower": "^1.8.4",
     "cfenv": "^1.1.0",
-    "dotenv": "^6.0.0",
-    "express": "~4.16.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
     "method-override": "~3.0.0",
     "morgan": "~1.9.1",
-    "nano": "^7.1.0",
+    "nano": "^7.1.1",
     "serve-favicon": "^2.5.0"
   }
 }
