--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "bower install --allow-root"
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'public/vendor', 'junction') } catch (e) { }\""
   },
   "engines": {
-    "node": ">=10.13.0"
+    "node": ">=10.13.0",
+    "yarn": ">= 1.0.0"
   },
   "dependencies": {
     "@cloudant/cloudant": "^2.4.1",
     "async": "^2.6.1",
     "body-parser": "~1.18.3",
-    "bower": "^1.8.4",
     "cfenv": "^1.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -22,6 +22,10 @@
     "method-override": "~3.0.0",
     "morgan": "~1.9.1",
     "nano": "^7.1.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "@bower_components/angular": "angular/bower-angular#~1.5.0",
+    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.6",
+    "@bower_components/font-awesome": "FortAwesome/Font-Awesome#^4.6.3",
+    "@bower_components/jquery": "jquery/jquery-dist#1.9.1 - 3"
   }
 }
