--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "2.0.0",
   "description": "Todo application",
   "main": "server.js",
+  "license": "UNLICENSED",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'public/vendor', 'junction') } catch (e) { }\""
+    "start": "node server.js"
   },
   "engines": {
-    "node": ">=10.13.0",
-    "yarn": ">= 1.0.0"
+    "node": ">=10.13.0"
   },
   "dependencies": {
     "@cloudant/cloudant": "^2.4.1",
@@ -20,12 +19,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "method-override": "~3.0.0",
-    "morgan": "~1.9.1",
     "nano": "^7.1.1",
-    "serve-favicon": "^2.5.0",
-    "@bower_components/angular": "angular/bower-angular#~1.5.0",
-    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.6",
-    "@bower_components/font-awesome": "FortAwesome/Font-Awesome#^4.6.3",
-    "@bower_components/jquery": "jquery/jquery-dist#1.9.1 - 3"
+    "serve-favicon": "^2.5.0"
   }
 }
