--- a/credentials.template.env
+++ b/credentials.template.env
@@ -1,5 +1,4 @@
 # Cloudant Credentials
-# TODO: Not used yet
-cloudant_account=
-cloudant_iam_apikey=
-cloudant_database=todo-cloudant
+CLOUDANT_USERNAME=
+CLOUDANT_APIKEY=
+CLOUDANT_DATABASE=todos
