--- a/kubernetes/helm/simple/local-values.yaml
+++ b/kubernetes/helm/simple/local-values.yaml
@@ -2,11 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: registry.eu-de.bluemix.net/mace/mytodos
-  tag: 2
+  tag: 9
   pullPolicy: Always
 
 secret:
@@ -16,7 +16,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 service:
-  # type: ClusterIP
+  type: ClusterIP
   port: 8080
 
 ingress:
