--- a/kubernetes/helm/simple/templates/service.yaml
+++ b/kubernetes/helm/simple/templates/service.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  # type: {{ .Values.service.type }}
+  type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       # targetPort: http
