--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -6,48 +6,56 @@ template:
     $ref: "#/messages/template.name"
   description:
     $ref: "#/messages/template.description"
+  header: '![](toolchain.svg?localize)'
+  icon: secure-lock-helm.svg
   required:
     - build
     - repo
+  info:
+    git url: >-
+      [https://github.com/open-toolchain/simple-helm-toolchain](https://github.com/open-toolchain/simple-helm-toolchain)
+    git branch: >-
+      [master](https://github.com/open-toolchain/simple-helm-toolchain/tree/master)
 toolchain:
-  name: 'mytodos-{{timestamp}}'
+  name: 'mytodos-toolchain-{{timestamp}}'
+  template:
+    getting_started:
+      $ref: "#/messages/template.gettingStarted" 
 services:
   repo:
-    service_id: githubpublic
+    service_id: hostedgit
     parameters:
-      repo_name: 'mytodos'
-      repo_url: 'https://github.com/lionelmace/mytodo'
+      repo_name: 'mytodos-{{timestamp}}'
+      repo_url: 'https://github.com/lionelmace/mytodos'
       type: clone
-      has_issues: false
-      enable_traceability: false
+      has_issues: true
+      enable_traceability: true
   build:
     service_id: pipeline
     parameters:
       services:
         - repo
-      name: 'mytodos ({{form.pipeline.parameters.branch-name}})'
+      name: 'mytodos-{{timestamp}}'
       ui-pipeline: true
       configuration:
         content:
           $text: pipeline.yml
         env:
           GIT_REPO: repo
-          GIT_BRANCH: '{{form.pipeline.parameters.branch-name}}'
-          API_KEY: '{{form.pipeline.parameters.api-key}}'
-          REGISTRY_REGION_ID: '{{form.pipeline.parameters.target-region}}'
+          CF_APP_NAME: '{{form.pipeline.parameters.app-name}}'
+          REGISTRY_REGION_ID: '{{form.pipeline.parameters.registry-region}}'
           REGISTRY_NAMESPACE: '{{form.pipeline.parameters.registry-namespace}}'
-          IMAGE_NAME: '{{form.pipeline.parameters.image-name}}'
-          TARGET_REGION_ID: '{{form.pipeline.parameters.target-region}}'
-          TARGET_CLUSTER_NAME: '{{form.pipeline.parameters.target-cluster-name}}'
-          TARGET_NAMESPACE: '{{form.pipeline.parameters.target-cluster-namespace}}'
-          TARGET_RESOURCE_GROUP: '{{form.pipeline.parameters.target-resource-group}}'
+          API_KEY: '{{form.pipeline.parameters.api-key}}'
+          PROD_REGION_ID: '{{form.pipeline.parameters.prod-region}}'
+          PROD_CLUSTER_NAME: '{{form.pipeline.parameters.prod-cluster-name}}'
+          PROD_CLUSTER_NAMESPACE: '{{form.pipeline.parameters.prod-cluster-namespace}}'
         execute: true
+  webide:
+    service_id: orion
 form:
   pipeline:
     parameters:
-      image-name: 'mytodos'
-      target-cluster-namespace: mytodos
-      target-resource-group: 'default'
-      branch-name: 'master'
+      app-name: '{{services.repo.parameters.repo_name}}'
+      prod-cluster-namespace: prod
     schema:
       $ref: deploy.json
