--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -295,7 +295,7 @@ stages:
       #Check cluster availability
       echo "=========================================================="
       echo "CHECKING CLUSTER readiness and namespace existence"
-      IP_ADDR=$(bx cs workers ${PIPELINE_KUBERNETES_CLUSTER_NAME} | grep normal | awk '{ print $2 }')
+      IP_ADDR=$(ibmcloud ks workers ${PIPELINE_KUBERNETES_CLUSTER_NAME} | grep normal | awk '{ print $2 }')
       if [ -z "${IP_ADDR}" ]; then
         echo -e "${PIPELINE_KUBERNETES_CLUSTER_NAME} not created or workers not ready"
         exit 1
@@ -495,6 +495,6 @@ stages:
       # kubectl describe pods --selector app=${CHART_NAME} --namespace ${CLUSTER_NAMESPACE}
 
       echo "=========================================================="
-      IP_ADDR=$(bx cs workers ${PIPELINE_KUBERNETES_CLUSTER_NAME} | grep normal | head -n 1 | awk '{ print $2 }')
+      IP_ADDR=$(ibmcloud ks workers ${PIPELINE_KUBERNETES_CLUSTER_NAME} | grep normal | head -n 1 | awk '{ print $2 }')
       PORT=$(kubectl get services --namespace ${CLUSTER_NAMESPACE} | grep ${RELEASE_NAME} | sed 's/.*:\([0-9]*\).*/\1/g')
       echo -e "View the application at: http://${IP_ADDR}:${PORT}"
