--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "method-override": "~3.0.0",
     "nano": "^7.1.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "mongodb": "^3.1.10"
   }
 }
