added disk parameter for postgres

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ vcap-local.json
 myreadme.txt
 .editorconfig
 kubernetes/helm/simple/local-values.yaml
+package-lock.json
 terraform/provider.tf
 terraform/.terraform
-terraform/terraform.tfstate
+terraform/terraform.tfstate*
