--- a/kubernetes/loadbalancer-deploy.yaml
+++ b/kubernetes/loadbalancer-deploy.yaml
@@ -6,7 +6,7 @@ metadata:
   name: mytodos
 spec:
   replicas: 2 # tells deployment to run 2 pods matching the template
-  template:   # create pods using pod definition in this template
+  template: # create pods using pod definition in this template
     metadata:
       labels:
         app: mytodos
@@ -14,15 +14,12 @@ spec:
     spec:
       containers:
       - name: mytodos
-        image: registry.eu-de.bluemix.net/mace/mytodos:1
+        image: registry.<region>.bluemix.net/<namespace>/mytodos:1
         imagePullPolicy: Always
         resources:
           requests:
-            cpu: 250m     # 250 millicores = 1/4 core
-            memory: 100Mi # 100 MB
-          limits:
-            cpu: 500m
-            memory: 300Mi
+            cpu: 100m
+            memory: 100Mi
         volumeMounts:
           - mountPath: /opt/service-bind # Mount the "service-bind-volume" volume into the pod.
             name: service-bind-volume
@@ -31,27 +28,6 @@ spec:
           secret:
             defaultMode: 420
             secretName: binding-todo-cloudant
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: mytodos-ingress
-spec:
-  rules:
-  - host: nicehacluster-504960.eu-de.containers.appdomain.cloud
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: mytodos
-          servicePort: 8080
-  # - host: www.mycustomdomain.com
-  #   http:
-  #     paths:
-  #     - path: /
-  #       backend:
-  #         serviceName: mytodos
-  #         servicePort: 3000
 ---
 # Service to expose frontend
 apiVersion: v1
@@ -62,9 +38,10 @@ metadata:
     app: mytodos
     tier: frontend
 spec:
+  type: LoadBalancer
   ports:
-  - protocol: TCP
-    port: 8080
+  - port: 8080 # Internal Port
+    # nodePort: 31513
   selector:
     app: mytodos
     tier: frontend
