--- a/kubernetes/nodeport-deploy.yaml
+++ b/kubernetes/nodeport-deploy.yaml
@@ -5,19 +5,19 @@ kind: Deployment
 metadata:
   name: mytodos
 spec:
-  replicas: 2 # tells deployment to run 2 pods matching the template
+  replicas: 3 # tells deployment to run 3 pods matching the template
   template: # create pods using pod definition in this template
     metadata:
       labels:
         app: mytodos
         tier: frontend
     spec:
+      # imagePullSecrets:
+      # - name: private-registry-secret
       containers:
       - name: mytodos
-        image: registry.eu-de.bluemix.net/mace/mytodos:1
+        image: registry.<region>.bluemix.net/<namespace>/mytodos:1
         imagePullPolicy: Always
-        ports: #istio
-        - containerPort: 8080 #istio
         resources:
           requests:
             cpu: 100m
@@ -29,7 +29,7 @@ spec:
         - name: service-bind-volume
           secret:
             defaultMode: 420
-            secretName: binding-cloudant-for-kubernetes
+            secretName: binding-todo-cloudant
 ---
 # Service to expose frontend
 apiVersion: v1
@@ -40,30 +40,10 @@ metadata:
     app: mytodos
     tier: frontend
 spec:
-  # if your cluster supports it, uncomment the following to automatically create
-  # an external load-balanced IP for the frontend service.
-  # type: LoadBalancer
-  #istio type: NodePort
+  type: NodePort
   ports:
   - port: 8080 # Internal Port
-    name: http #istio
-    #nodePort: 31513
+    nodePort: 31513
   selector:
     app: mytodos
     tier: frontend
-
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: gateway
-  annotations:
-    kubernetes.io/ingress.class: "istio"
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /.*
-        backend:
-          serviceName: mytodos
-          servicePort: 8080
