--- a/chart/mytodos/values.yaml
+++ b/chart/mytodos/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 3
 
 image:
   repository: registry.eu-de.bluemix.net/mace/mytodos
-  tag: 1
+  tag: "1.0"
   pullPolicy: Always
 
 secret:
