--- a/kubernetes/loadbalancer-deploy.yaml
+++ b/kubernetes/loadbalancer-deploy.yaml
@@ -14,12 +14,15 @@ spec:
     spec:
       containers:
       - name: mytodos
-        image: registry.<region>.bluemix.net/<namespace>/mytodos:1
+        image: <region>.icr.io/<namespace>/mytodos:1.0
         imagePullPolicy: Always
         resources:
           requests:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 250m     # 250 millicores = 1/4 core
+            memory: 128Mi # 128 MB
+          limits:
+            cpu: 500m
+            memory: 384Mi
         volumeMounts:
           - mountPath: /opt/service-bind # Mount the "service-bind-volume" volume into the pod.
             name: service-bind-volume
