--- a/chart/mytodos/values.yaml
+++ b/chart/mytodos/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 3
 
 image:
-  repository: registry.<region>.bluemix.net/<namespace>/todo-<lastname>
+  repository: <region>.icr.io/<namespace>/todo-<lastname>
   tag: "1.0"
   pullPolicy: Always
 
