update docker image FROM, package.json, and Mongo ICD

--- a/credentials.template.env
+++ b/credentials.template.env
@@ -3,6 +3,8 @@ CLOUDANT_USERNAME=
 CLOUDANT_APIKEY=
 CLOUDANT_DATABASE=todos
 
-# Mongo Credentials
-MONGO_URI=
-MONGO_CA_CERTIFICATE_BASE64=
+# Databases for MongoDB Credentials
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_HOSTS=
+MONGO_CERTIFICATE_BASE64=
