--- a/chart/mytodos/local-values.yaml
+++ b/chart/mytodos/local-values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 3
 
 image:
-  repository: registry.eu-de.bluemix.net/mace/mytodos
+  repository: de.icr.io/mace/mytodos
   tag: "1.0"
   pullPolicy: Always
 
