--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-node_modules
-ibmcloud/certificate
-chart/mytodos/local-values.yaml
+/node_modules
+/ibmcloud/certificate
+/chart/mytodos/local-values.yaml
 credentials.env
-kubernetes/ingress-tls-mydeploy.yaml
+/kubernetes/ingress-tls-mydeploy.yaml
 myreadme.txt
 .editorconfig
-terraform/provider.tf
-terraform/.terraform
-terraform/terraform.tfstate*
+/terraform/provider.tf
+/terraform/.terraform
+/terraform/terraform.tfstate*
 vcap-local.json
