--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
-/node_modules
-/ibmcloud/certificate
-/chart/mytodos/local-values.yaml
+# Node.js
+node_modules
+
+# Terraform
+terraform/provider.tf
+terraform/.terraform
+terraform/terraform.tfstate*
+
+# Cloud Foundry
+vcap-local.json
+
+# Local Values
+ibmcloud/certificate
+chart/mytodos/local-values.yaml
 credentials.env
-/kubernetes/ingress-tls-mydeploy.yaml
+kubernetes/ingress-tls-mydeploy.yaml
+
+# Miscellaneous
 myreadme.txt
 .editorconfig
-/terraform/provider.tf
-/terraform/.terraform
-/terraform/terraform.tfstate*
-vcap-local.json
