comment credential lines

--- a/credentials.template.env
+++ b/credentials.template.env
@@ -1,10 +1,10 @@
 # Cloudant Credentials
-CLOUDANT_USERNAME=
-CLOUDANT_APIKEY=
-CLOUDANT_DATABASE=todos
+#CLOUDANT_USERNAME=
+#CLOUDANT_APIKEY=
+#CLOUDANT_DATABASE=todos
 
 # Databases for MongoDB Credentials
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_HOSTS=
-MONGO_CERTIFICATE_BASE64=
+#MONGO_USERNAME=
+#MONGO_PASSWORD=
+#MONGO_HOSTS=
+#MONGO_CERTIFICATE_BASE64=
