--- a/kubernetes/ingress-tls-deploy.yaml
+++ b/kubernetes/ingress-tls-deploy.yaml
@@ -5,7 +5,7 @@ kind: Deployment
 metadata:
   name: mytodos
 spec:
-  replicas: 2 # tells deployment to run 2 pods matching the template
+  replicas: 2 # tells deployment to run 2 pods
   selector:
     matchLabels:
       app: mytodos
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: mytodos
-        image: <region>.icr.io/<namespace>/todo-<lastname>:1.0
+        image: <registry-region>.icr.io/<namespace>/todo-<lastname>:1.0
         imagePullPolicy: Always
         resources:
           requests:
@@ -26,38 +26,30 @@ spec:
           limits:
             cpu: 500m
             memory: 384Mi
-        # envFrom:
-        # - secretRef:
-        #     name: database-credentials
+        envFrom:
+        - secretRef:
+            name: database-credentials
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: mytodos-ingress
   annotations:
-    ingress.bluemix.net/rewrite-path: "serviceName=mytodos rewrite=/"
     # Force the use of https if the request is http
     ingress.bluemix.net/redirect-to-https: "True"
 spec:
   tls:
   - hosts:
-    - <cluster-name>.<region>.containers.appdomain.cloud
+    - todo.<cluster-name>.<cloud-region>.containers.appdomain.cloud
     secretName: <cluster-name>
   rules:
-  - host: <cluster-name>.<region>.containers.appdomain.cloud
+  - host: todo.<cluster-name>.<cloud-region>.containers.appdomain.cloud
     http:
       paths:
-      - path: /todo/
+      - path: /
         backend:
           serviceName: mytodos
           servicePort: 8080
-  # - host: www.mycustomdomain.com
-  #   http:
-  #     paths:
-  #     - path: /
-  #       backend:
-  #         serviceName: mytodos
-  #         servicePort: 3000
 ---
 # Service to expose frontend
 apiVersion: v1
