Deploy fails due to missing secret
At this step, the user does not create the secret yet: 
https://lionelmace.github.io/iks-lab/deploy-app.html

--- a/kubernetes/ingress-tls-deploy.yaml
+++ b/kubernetes/ingress-tls-deploy.yaml
@@ -29,6 +29,7 @@ spec:
         envFrom:
         - secretRef:
             name: database-credentials
+            optional: true
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
