--- a/kubernetes/ingress-tls-deploy.yaml
+++ b/kubernetes/ingress-tls-deploy.yaml
@@ -26,9 +26,9 @@ spec:
           limits:
             cpu: 500m
             memory: 384Mi
-        envFrom:
-        - secretRef:
-            name: database-credentials
+        # envFrom:
+        # - secretRef:
+        #     name: database-credentials
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
